src/main/java/com/example/warsztat_samochodowy/error/MechanicNotFoundException.java
package com.example.warsztat_samochodowy.error;

public class MechanicNotFoundException extends RuntimeException {
    public MechanicNotFoundException(String message) {
        super(message);
    }
}
